appId: eu.idura.expo.example


# User cancels by closing the browser

---
- launchApp:
    clearState: true
- tapOn: "Login with Danish MitID"
- assertVisible: "Continue.*"
- tapOn: "Close tab"
- assertVisible: ".*UserCancelledError.*"
