appId: eu.idura.expo.example


# User cancels by closing the browser

---
- launchApp:
    clearState: true
- tapOn: "Login with Vipps MobilePay"
- assertVisible: "Open Vipps"
- tapOn: "Close tab"
- assertVisible: ".*UserCancelledError.*"
