appId: eu.idura.expo.example


# User cancels by closing the browser

---
- launchApp:
    clearState: true
- tapOn: "Login with Swedish BankID"
- assertVisible: 'Open page in "BankID"'
- tapOn: "Close tab"
- assertVisible: ".*UserCancelledError.*"
